apply editorconfig